--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -8,19 +8,12 @@
 	<title></title>
 </head>
 <body>
-	<h1>
-		Welcome to first page with
-		<span style="color:red; font-weight:bold">NODEJS</span>
-	</h1>
-	<h2>
-		<%- n; %>
-	</h2>
-	
-		<% if (age < 18) { %>
-			<h1> age is smaller than 18 </h1>
-		<% } else { %>
-		   	<h1> age is bigger than 18 </h1>
-		<% } %>
-	
+	<h1>Welcome to my ECommerce page</h1>
+	<ul>
+		<li>Name: Truong Dang Khoa</li>
+		<li>ID: 1512261</li>
+		<li>Specialized: Software Engineering</li>
+		<li>Subject: ECommerce</li>
+	</ul>
 </body>
 </html>
